show nickname and avatar on home#index

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<p>Hello,<%= current_user.nickname %></p>
-<p><img src="<%= current_user.avatar %>", width="64" height="64"></p>
+<div class="well lead">
+  Hello, <%= current_user.nickname %>
+</div>
+<img src="<%= current_user.avatar %>" class="img-circle img-responsive">
