add wx_pay demo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,22 @@
-<div class="well lead">
+<div class="alert alert-success">
   Hello, <%= current_user.nickname %>
+  <a href="#" onclick="javascript:wxpay();" class="alert-link pull-right">
+    Try wechat pay!
+  </a>
 </div>
 <img src="<%= current_user.avatar %>" class="img-circle img-responsive">
+<script>
+ function wxpay() {
+   $.post('/wx_pay', function(data) {
+     WeixinJSBridge.invoke('getBrandWCPayRequest', data, function(res){
+       if(res.err_msg == "get_brand_wcpay_request:ok") {
+         alert("支付成功");
+       } else if(res.err_msg == "get_brand_wcpay_request:cancel") {
+         alert("支付取消");
+       } else {
+         alert("支付失败");
+       }
+     });
+   });
+ }
+</script>
