--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <%= wechat_config_js debug: false, api: %w(hideMenuItems closeWindow) -%>
 <script type="application/javascript">
   wx.ready(function() {
