--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,6 @@
   </div>
   <div class="weui-btn-area">
     <%= f.submit "Confirm", class: 'weui-btn weui-btn_primary' %>
-    <a href="javascript:wx.closeWindow();" class="weui-btn weui-btn_plain_default">Close</a>
+    <a href="javascript:wx.closeWindow();" class="weui-btn weui-btn_plain-default">Close</a>
   </div>
 <% end %>
