--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js</script>
 <%= wechat_config_js debug: true, api: %w(hideMenuItems closeWindow chooseWXPay) -%>
 <script type="application/javascript">
  wx.ready(function() {
