--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,14 +8,20 @@
 </div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="weui-cells_title">Following fields is required</div>
+  <div class="weui-cells_title">必填，用于发送代码包</div>
   <div class="weui-cells weui-cells_form">
     <div class="weui-cell">
-      <div class="weui-cell__hd">
-        <%= f.label :birthday, class: 'weui-label' %>
-      </div>
+      <div class="weui-cell__hd"><label class="weui-label">邮箱</label></div>
       <div class="weui-cell__bd weui-cell_primary">
-        <%= f.date_field :birthday, class: 'weui-input' %>
+        <%= f.email_field :email, placeholder: "username@gmail.com", class: 'weui-input' -%>
+      </div>
+    </div>
+  </div>
+  <div class="weui-cells_title">选填，用于Discord群识别付费用户</div>
+    <div class="weui-cell">
+      <div class="weui-cell__hd"><label class="weui-label">Discord name</label></div>
+      <div class="weui-cell__bd weui-cell_primary">
+        <%= f.text_field :discord_username, placeholder: "EricGuo#6703 / 新的用户名", class: 'weui-input' -%>
       </div>
     </div>
   </div>
