--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-<%= wechat_config_js debug: true, api: %w(hideMenuItems closeWindow chooseWXPay) -%>
+<%= wechat_config_js debug: false, api: %w(hideMenuItems closeWindow chooseWXPay) -%>
 <script type="application/javascript">
  wx.ready(function() {
    wx.hideOptionMenu();
