--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-<%= wechat_config_js debug: true, api: %w(closeWindow) -%>
+<%= wechat_config_js debug: false, api: %w(closeWindow) -%>
 
 <div class="weui-msg">
   <div class="weui-msg__text-area">
