Give discord link.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="weui-msg">
   <div class="weui-msg__text-area">
-    <h1 class="weui-msg__title">Sign Up</h1>
+    <h1 class="weui-msg__title">登记您的联系方式</h1>
   </div>
 </div>
 
