--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,8 +13,13 @@
   </div>
   <div class="weui-msg__opr-area">
     <p class="weui-btn-area">
-      <% if Figaro.env.wechat_pay_mch_id %>
+      <% unless current_user.paid? %>
         <a href="javascript:wxpay();" class="weui-btn weui-btn_primary">以 32 RMB 购买</a>
+      <% else %>
+        <p class="weui-msg__desc">源码包将在会后邮件发送，欢迎加入discord服务器：</p>
+        <p class="weui-msg__desc">https://discord.gg/VupMDWgv</p>
+        <p class="weui-msg__desc">若对此支付程序感兴趣，欢迎查看源码：</p>
+        <p class="weui-msg__desc">https://github.com/Eric-Guo/wechat-starter</p>
       <% end %>
       <a href="javascript:wx.closeWindow();" class="weui-btn weui-btn_plain-default">关闭</a>
     </p>
