successfully pay will refresh page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,7 @@
          signType: data.signType,
          paySign: data.paySign,
          success: function (res) {
-           alert(JSON.stringify(res));
+          window.location.href = "/";
          },
          error: function(e) {
            alert(JSON.stringify(e));
