--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
   <div class="weui-msg__opr-area">
     <p class="weui-btn-area">
       <% unless current_user.paid? %>
-        <a href="javascript:wxpay();" class="weui-btn weui-btn_primary">以 32 RMB 购买</a>
+        <a href="javascript:wxpay();" class="weui-btn weui-btn_primary">以 16 元购买获取</a>
       <% else %>
         <p class="weui-msg__desc">源码包将在会后邮件发送，欢迎加入discord服务器：</p>
         <p class="weui-msg__desc">https://discord.gg/VupMDWgv</p>
