--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
       <% unless current_user.paid? %>
         <a href="javascript:wxpay();" class="weui-btn weui-btn_primary">以 16 元购买获取</a>
       <% else %>
-        <p class="weui-msg__desc">源码包将在会后邮件发送，欢迎加入discord服务器：</p>
+        <p class="weui-msg__desc">源码包将在两天内邮件发送，欢迎加入discord服务器：</p>
         <p class="weui-msg__desc">https://discord.gg/VupMDWgv</p>
         <p class="weui-msg__desc">若对此支付程序感兴趣，欢迎查看源码：</p>
         <p class="weui-msg__desc">https://github.com/Eric-Guo/wechat-starter</p>
